Incorporando modificaciones finales para facturas

--- a/Resilient/m0c0_profiling_invoice/views/account_invoice_globals.xml
+++ b/Resilient/m0c0_profiling_invoice/views/account_invoice_globals.xml
@@ -46,5 +46,17 @@
                 </div>
             </div>
         </xpath>
+        <xpath expr="//div[@class='footer o_standard_footer']" position="replace">
+            <div class="footer o_standard_footer">
+                <div class="text-center" style="border-top: 1px solid black;">
+                    <div name="financial_infos">
+                        <span t-field="company.report_footer"/>
+                    </div>
+                    <div t-if="report_type == 'pdf'" class="text-muted">
+                        Page: <span class="page"/> / <span class="topage"/>
+                    </div>
+                </div>
+            </div>
+        </xpath>
     </template>
 </odoo>
