--- a/Resilient/m0c0_profiling_invoice/views/account_invoice_lines.xml
+++ b/Resilient/m0c0_profiling_invoice/views/account_invoice_lines.xml
@@ -25,7 +25,7 @@
                                 <span t-field="line.uom_id" groups="uom.group_uom"/>
                             </td>
                             <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                <span t-esc="line.price_unit + patch_total / line.quantity"/>
+                                <span t-esc="line.price_unit + patch_total / line.quantity" t-options='{"widget": "monetary", "display_currency": o.currency_id}' />
                             </td>
                             <td t-if="display_discount" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                 <span t-field="line.discount"/>
@@ -34,8 +34,8 @@
                                 <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.invoice_line_tax_ids))"/>
                             </td>
                             <td class="text-right o_price_total">
-                                <span t-esc="line.price_subtotal + patch_total" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                <span t-esc="line.price_total + patch_total" groups="account.group_show_line_subtotals_tax_included"/>
+                                <span t-esc="line.price_subtotal + patch_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}' groups="account.group_show_line_subtotals_tax_excluded"/>
+                                <span t-esc="line.price_total + patch_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}' groups="account.group_show_line_subtotals_tax_included"/>
                             </td>
                         </t>
                         <t t-if="line.display_type == 'line_section'">
@@ -63,7 +63,7 @@
                             <tr class="border-black o_subtotal" style="">
                                 <td><strong>Subtotal</strong></td>
                                 <td class="text-right">
-                                    <span t-esc="o.amount_untaxed + patch_total"/>
+                                    <span t-esc="o.amount_untaxed + patch_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}' />
                                 </td>
                             </tr>
                             <t t-foreach="o.amount_by_group" t-as="amount_by_group">
@@ -91,7 +91,7 @@
                         <tr class="border-black o_total">
                             <td><strong>Total</strong></td>
                             <td class="text-right">
-                                <span t-esc="o.amount_total + patch_total"/>
+                                <span t-esc="o.amount_total + patch_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}' />
                             </td>
                         </tr>
                     </table>
@@ -113,7 +113,7 @@
                                     <span t-field="patch.concept"/>
                                 </td>
                                 <td t-attf-class="text-right o_price_total">
-                                    <div class="d-inline">-<span t-field="patch.mount" class="oe_currency_value" />&amp;nbsp;$</div>
+                                    <div class="d-inline">-<span t-field="patch.mount" class="oe_currency_value" /></div>
                                 </td>
                             </tr>
                         </t>
