--- a/Resilient/m0c0_profiling_fiscal-lock/views/fiscal_year_change_lock_date_backup_remainder.xml
+++ b/Resilient/m0c0_profiling_fiscal-lock/views/fiscal_year_change_lock_date_backup_remainder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="backup_remainder_fiscal_lock_date_override_view" model="ir.ui.view">
-        <field name="model">change.lock.date</field>
+        <field name="model">account.update.lock_to_date.form</field>
         <field name="inherit_id" ref="account_lock_to_date.account_update_lock_to_date_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//group" position="before">
